# ESG-Lex-Harmonizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_demo.bat
.github/workflows/: api-docs.yml  ci.yml
esg_lex_harmonizer/: __init__.py
esg_lex_harmonizer/advanced_frontend/: __init__.py
esg_lex_harmonizer/api/: advanced_api.py  main.py
esg_lex_harmonizer/conflict/: detector.py
esg_lex_harmonizer/data/: water_law_mock.json
esg_lex_harmonizer/evaluation/: metrics.py
esg_lex_harmonizer/harmonizer/: recommender.py
esg_lex_harmonizer/impact/: analyzer.py
esg_lex_harmonizer/input_preprocessing/: preprocessor.py
esg_lex_harmonizer/knowledge_expansion/: __init__.py  expander.py
esg_lex_harmonizer/rag/: __init__.py  pipeline.py
scripts/: advanced_streamlit_platform.py  api_demo.py  batch_test.py  data_cleaning.py  generate_api_docs.py  github_resource_analyzer.py  knowledge_expansion_demo.py  knowledge_graph_builder.py  mock_esg_data.py  mock_water_law_data.py  paper_analysis.py  rag_demo.py  rag_pipeline.py  streamlit_demo.py  streamlit_waterlaw_demo.py
tests/: test_api.py  test_conflict.py  test_harmonizer.py  test_impact.py  test_preprocessor.py
venv310/: pyvenv.cfg
venv310/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
