[project]
name = "esg-lex-harmonizer"
version = "0.1.0"
description = "ESG法規衝突偵測與協調建議原型系統"
authors = [
    {name = "MJS-Ermine"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "jieba (>=0.42.1,<0.43.0)",
    "spacy (>=3.8.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
